# trebuchet

./: pyproject.toml
tests/: test_trebuchet.py
